--- a/packages/react-consumer/package.json
+++ b/packages/react-consumer/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-in-vue_home",
   "version": "0.0.0",
+  "type": "module",
   "private": true,
   "devDependencies": {
     "@babel/core": "7.24.3",
